<resources>
    <string name="app_name">Second Hand</string>

    <string name="preference_file_key">second_hand_app_pref</string>
    <string name="text_label_home">Home</string>
    <string name="text_label_notification">Notifikasi</string>
    <string name="text_label_sell">Jual</string>
    <string name="text_label_sell_list">Daftar Jual</string>
    <string name="text_label_account">Akun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort_by">Sortir Dengan</string>
    <string name="apply">Terapkan</string>
    <string name="product_item_image">Picture of product</string>
    <string name="text_label_product">Produk</string>
    <string name="interested">Diminati</string>
    <string name="sold">Terjual</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="password_baru">Password baru</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="ubah">Ubah</string>
    <string name="base_price_strike_text"><strike>Rp. %s</strike></string>
    <string name="bid_price_text">Ditawar Rp. %s</string>

    <string name="empty_state_order_text">Belum ada produkmu yang diminati nih. sabar ya rejeki ngga kemana kok</string>
</resources>